feat: shuffle with repetitions